# declarative-performance

./: .gitignore  README.md  pyproject.toml  start-mac.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: architecture-notes.md  decision-log.md  dogma.md  project-brief.md  questions.md
docs/dialogue-summaries/: 20260515-python-libs.md  20260516-carla.md
src/: carla_defaults.yml
src/declarative_performance/: __init__.py  __main__.py  carxp_generator.py  cli.py
src/declarative_performance/templates/: carxp.xml.j2
tests/: test_carxp_generator.py  test_cli.py
tests/fixtures/: test1.bank.alias.decoded.json  test1.carxp  test1.chunk.decoded.plist  test1.yml
tests/tools/: decode_bank_alias.py  decode_fixture_chunk.py
